# handwritten-number-classifier

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
dokumentaatio/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  vaatimusmaarittely.md
dokumentaatio/viikkoraportit/: viikkoraportti1  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: calculation_utilities.py  distance_measures.py  image_data_processing.py  image_plotting.py  index.py  knn.py  ui.py
src/tests/: calculation_utilities_test.py  distance_measures_test.py  image_data_processing_test.py  knn_test.py
