[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Vili Sirkeoja <vili.sirkeoja@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
